--- a/css/styles.css
+++ b/css/styles.css
@@ -593,6 +593,10 @@ html {
   margin-bottom: 0.25rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .mb-\[114px\] {
   margin-bottom: 114px;
 }
@@ -607,14 +611,6 @@ html {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 
 .flex {
@@ -641,10 +637,6 @@ html {
   height: 213px;
 }
 
-.h-\[300px\] {
-  height: 300px;
-}
-
 .h-\[303px\] {
   height: 303px;
 }
@@ -661,16 +653,16 @@ html {
   height: 500px;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
 .h-\[77px\] {
   height: 77px;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-\[60px\] {
-  height: 60px;
 }
 
 .w-0 {
@@ -687,6 +679,10 @@ html {
 
 .w-\[182px\] {
   width: 182px;
+}
+
+.w-\[224px\] {
+  width: 224px;
 }
 
 .w-\[227px\] {
@@ -709,10 +705,6 @@ html {
   width: 100%;
 }
 
-.w-\[224px\] {
-  width: 224px;
-}
-
 .max-w-\[1440px\] {
   max-width: 1440px;
 }
@@ -733,13 +725,14 @@ html {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
+}
+
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
 }
 
 .gap-y-10 {
@@ -756,16 +749,6 @@ html {
 
 .gap-y-8 {
   row-gap: 2rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
 }
 
 .self-start {
@@ -851,6 +834,11 @@ html {
   padding-right: 2rem;
 }
 
+.px-\[100px\] {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -866,9 +854,8 @@ html {
   padding-bottom: 72px;
 }
 
-.px-\[100px\] {
-  padding-left: 100px;
-  padding-right: 100px;
+.pb-14 {
+  padding-bottom: 3.5rem;
 }
 
 .pb-3 {
@@ -887,16 +874,16 @@ html {
   padding-bottom: 112px;
 }
 
+.pl-0 {
+  padding-left: 0px;
+}
+
 .pl-8 {
   padding-left: 2rem;
 }
 
 .pl-9 {
   padding-left: 2.25rem;
-}
-
-.pl-\[130px\] {
-  padding-left: 130px;
 }
 
 .pr-0 {
@@ -915,24 +902,20 @@ html {
   padding-right: 1.5rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
-}
-
-.pt-9 {
-  padding-top: 2.25rem;
-}
-
 .pt-14 {
   padding-top: 3.5rem;
 }
 
-.pb-14 {
-  padding-bottom: 3.5rem;
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-9 {
+  padding-top: 2.25rem;
 }
 
 .text-center {
@@ -961,6 +944,11 @@ html {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -973,15 +961,6 @@ html {
 
 .text-xs {
   font-size: 12px;
-}
-
-.text-lg {
-  font-size: 18px;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-extralight {
@@ -1030,6 +1009,11 @@ html {
   color: rgb(255 247 233 / var(--tw-text-opacity));
 }
 
+.text-darkblue {
+  --tw-text-opacity: 1;
+  color: rgb(19 49 154 / var(--tw-text-opacity));
+}
+
 .text-green {
   --tw-text-opacity: 1;
   color: rgb(2 188 125 / var(--tw-text-opacity));
@@ -1045,11 +1029,6 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-darkblue {
-  --tw-text-opacity: 1;
-  color: rgb(19 49 154 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -1058,24 +1037,20 @@ html {
   opacity: 0.2;
 }
 
-.opacity-70 {
-  opacity: 0.7;
-}
-
-.opacity-80 {
-  opacity: 0.8;
-}
-
-.opacity-90 {
-  opacity: 0.9;
-}
-
 .opacity-40 {
   opacity: 0.4;
 }
 
 .opacity-60 {
   opacity: 0.6;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .duration-200 {
@@ -1147,6 +1122,10 @@ html {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:pl-\[130px\] {
+    padding-left: 130px;
   }
 
   .lg\:pr-\[7rem\] {
