--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,10 @@ html {
   position: relative;
 }
 
+.-bottom-6 {
+  bottom: -1.5rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -559,12 +563,24 @@ html {
   top: 0px;
 }
 
+.top-\[135px\] {
+  top: 135px;
+}
+
 .top-\[228px\] {
   top: 228px;
 }
 
 .top-\[330px\] {
   top: 330px;
+}
+
+.top-\[342px\] {
+  top: 342px;
+}
+
+.top-\[420px\] {
+  top: 420px;
 }
 
 .z-0 {
@@ -579,6 +595,10 @@ html {
   z-index: 20;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -589,12 +609,21 @@ html {
   margin-bottom: 1.5rem;
 }
 
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .mb-\[114px\] {
@@ -625,6 +654,10 @@ html {
   height: 109px;
 }
 
+.h-\[137px\] {
+  height: 137px;
+}
+
 .h-\[153px\] {
   height: 153px;
 }
@@ -633,12 +666,24 @@ html {
   height: 154px;
 }
 
+.h-\[193px\] {
+  height: 193px;
+}
+
 .h-\[213px\] {
   height: 213px;
 }
 
+.h-\[237px\] {
+  height: 237px;
+}
+
 .h-\[303px\] {
   height: 303px;
+}
+
+.h-\[331px\] {
+  height: 331px;
 }
 
 .h-\[40px\] {
@@ -653,6 +698,10 @@ html {
   height: 500px;
 }
 
+.h-\[534px\] {
+  height: 534px;
+}
+
 .h-\[60px\] {
   height: 60px;
 }
@@ -665,12 +714,36 @@ html {
   height: 100%;
 }
 
+.min-h-\[400px\] {
+  min-height: 400px;
+}
+
+.min-h-\[500px\] {
+  min-height: 500px;
+}
+
 .w-0 {
   width: 0px;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-\[133px\] {
   width: 133px;
+}
+
+.w-\[1376px\] {
+  width: 1376px;
+}
+
+.w-\[142px\] {
+  width: 142px;
+}
+
+.w-\[143px\] {
+  width: 143px;
 }
 
 .w-\[160px\] {
@@ -689,12 +762,24 @@ html {
   width: 227px;
 }
 
+.w-\[252px\] {
+  width: 252px;
+}
+
+.w-\[263px\] {
+  width: 263px;
+}
+
 .w-\[287px\] {
   width: 287px;
 }
 
 .w-\[336px\] {
   width: 336px;
+}
+
+.w-\[723px\] {
+  width: 723px;
 }
 
 .w-\[73px\] {
@@ -705,12 +790,35 @@ html {
   width: 100%;
 }
 
+.w-\[120\%\] {
+  width: 120%;
+}
+
 .max-w-\[1440px\] {
   max-width: 1440px;
 }
 
 .max-w-\[492px\] {
   max-width: 492px;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.-translate-x-24 {
+  --tw-translate-x: -6rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-24 {
+  --tw-translate-x: 6rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1\/4 {
+  --tw-translate-x: -25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -751,12 +859,44 @@ html {
   row-gap: 2rem;
 }
 
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-x-12 {
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
+}
+
+.gap-x-14 {
+  -moz-column-gap: 3.5rem;
+       column-gap: 3.5rem;
+}
+
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+}
+
+.gap-y-12 {
+  row-gap: 3rem;
+}
+
 .self-start {
   align-self: flex-start;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -779,6 +919,16 @@ html {
 
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-lightblue {
+  --tw-border-opacity: 1;
+  border-color: rgb(76 145 247 / var(--tw-border-opacity));
+}
+
+.border-pink {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 11 113 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -854,8 +1004,35 @@ html {
   padding-bottom: 72px;
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .pb-14 {
   padding-bottom: 3.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
 }
 
 .pb-3 {
@@ -876,6 +1053,10 @@ html {
 
 .pl-0 {
   padding-left: 0px;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .pl-8 {
@@ -902,12 +1083,24 @@ html {
   padding-right: 1.5rem;
 }
 
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
 .pt-14 {
   padding-top: 3.5rem;
 }
 
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pt-28 {
+  padding-top: 7rem;
 }
 
 .pt-8 {
@@ -1033,6 +1226,10 @@ html {
   text-decoration-line: underline;
 }
 
+.opacity-10 {
+  opacity: 0.1;
+}
+
 .opacity-20 {
   opacity: 0.2;
 }
@@ -1053,6 +1250,10 @@ html {
   opacity: 0.8;
 }
 
+.opacity-90 {
+  opacity: 0.9;
+}
+
 .duration-200 {
   transition-duration: 200ms;
 }
@@ -1067,18 +1268,54 @@ html {
   background-color: #fff;
 }
 
+.hover\:border-pink\/10:hover {
+  border-color: rgb(229 11 113 / 0.1);
+}
+
+.hover\:border-white\/30:hover {
+  border-color: rgb(255 255 255 / 0.3);
+}
+
+.hover\:bg-lightblue\/0:hover {
+  background-color: rgb(76 145 247 / 0);
+}
+
+.hover\:bg-pink\/10:hover {
+  background-color: rgb(229 11 113 / 0.1);
+}
+
+.hover\:bg-white\/20:hover {
+  background-color: rgb(255 255 255 / 0.2);
+}
+
 .hover\:no-underline:hover {
   text-decoration-line: none;
 }
 
-.hover\:brightness-75:hover {
-  --tw-brightness: brightness(.75);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 @media (min-width: 768px) {
+  .md\:left-0 {
+    left: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
   .md\:w-\[710px\] {
     width: 710px;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .md\:w-\[1376px\] {
+    width: 1376px;
+  }
+
+  .md\:translate-x-24 {
+    --tw-translate-x: 6rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:flex-row {
@@ -1089,6 +1326,10 @@ html {
     justify-content: space-between;
   }
 
+  .md\:rounded-full {
+    border-radius: 9999px;
+  }
+
   .md\:px-\[90px\] {
     padding-left: 90px;
     padding-right: 90px;
@@ -1096,6 +1337,10 @@ html {
 
   .md\:pl-\[90px\] {
     padding-left: 90px;
+  }
+
+  .md\:pr-\[90px\] {
+    padding-right: 90px;
   }
 
   .md\:text-29xl {
@@ -1124,12 +1369,21 @@ html {
     flex-direction: row;
   }
 
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .lg\:pl-\[130px\] {
     padding-left: 130px;
   }
 
   .lg\:pr-\[7rem\] {
     padding-right: 7rem;
+  }
+
+  .lg\:pl-\[90px\] {
+    padding-left: 90px;
   }
 
   .lg\:opacity-70 {
@@ -1153,5 +1407,9 @@ html {
 
   .xl\:pl-\[200px\] {
     padding-left: 200px;
+  }
+
+  .xl\:pr-\[200px\] {
+    padding-right: 200px;
   }
 }
