--- a/css/styles.css
+++ b/css/styles.css
@@ -425,6 +425,7 @@ video {
 html {
   --tw-text-opacity: 1;
   color: rgb(19 19 19 / var(--tw-text-opacity));
+  scroll-behavior: smooth;
 }
 
 *, ::before, ::after {
@@ -642,6 +643,14 @@ html {
   margin-top: 1rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -790,8 +799,8 @@ html {
   width: 100%;
 }
 
-.w-\[120\%\] {
-  width: 120%;
+.w-5\/6 {
+  width: 83.333333%;
 }
 
 .max-w-\[1440px\] {
@@ -800,6 +809,10 @@ html {
 
 .max-w-\[492px\] {
   max-width: 492px;
+}
+
+.max-w-\[700px\] {
+  max-width: 700px;
 }
 
 .flex-shrink-0 {
@@ -811,14 +824,23 @@ html {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-24 {
-  --tw-translate-x: 6rem;
+.rotate-45 {
+  --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-1\/4 {
-  --tw-translate-x: -25%;
+.-rotate-\[30\%\] {
+  --tw-rotate: -30%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-12 {
+  --tw-rotate: -12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -831,6 +853,11 @@ html {
 
 .justify-center {
   justify-content: center;
+}
+
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
 }
 
 .gap-x-2 {
@@ -847,6 +874,10 @@ html {
   row-gap: 2.5rem;
 }
 
+.gap-y-12 {
+  row-gap: 3rem;
+}
+
 .gap-y-4 {
   row-gap: 1rem;
 }
@@ -857,30 +888,6 @@ html {
 
 .gap-y-8 {
   row-gap: 2rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-x-12 {
-  -moz-column-gap: 3rem;
-       column-gap: 3rem;
-}
-
-.gap-x-14 {
-  -moz-column-gap: 3.5rem;
-       column-gap: 3.5rem;
-}
-
-.gap-x-16 {
-  -moz-column-gap: 4rem;
-       column-gap: 4rem;
-}
-
-.gap-y-12 {
-  row-gap: 3rem;
 }
 
 .self-start {
@@ -961,6 +968,10 @@ html {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-lightblue\/20 {
+  background-color: rgb(76 145 247 / 0.2);
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -974,6 +985,10 @@ html {
   padding: 0.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -982,6 +997,11 @@ html {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
 }
 
 .px-\[100px\] {
@@ -1002,21 +1022,6 @@ html {
 .py-\[72px\] {
   padding-top: 72px;
   padding-bottom: 72px;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
 }
 
 .pb-14 {
@@ -1055,10 +1060,6 @@ html {
   padding-left: 0px;
 }
 
-.pl-4 {
-  padding-left: 1rem;
-}
-
 .pl-8 {
   padding-left: 2rem;
 }
@@ -1085,6 +1086,10 @@ html {
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
 }
 
 .pt-12 {
@@ -1156,6 +1161,11 @@ html {
   font-size: 12px;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-extralight {
   font-weight: 200;
 }
@@ -1188,8 +1198,20 @@ html {
   line-height: 1.25;
 }
 
+.leading-7 {
+  line-height: 1.75rem;
+}
+
 .tracking-\[0\.25rem\] {
   letter-spacing: 0.25rem;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-black {
@@ -1293,16 +1315,8 @@ html {
 }
 
 @media (min-width: 768px) {
-  .md\:left-0 {
-    left: 0px;
-  }
-
   .md\:block {
     display: block;
-  }
-
-  .md\:w-\[710px\] {
-    width: 710px;
   }
 
   .md\:w-1\/2 {
@@ -1311,6 +1325,10 @@ html {
 
   .md\:w-\[1376px\] {
     width: 1376px;
+  }
+
+  .md\:w-\[710px\] {
+    width: 710px;
   }
 
   .md\:translate-x-24 {
@@ -1378,12 +1396,16 @@ html {
     padding-left: 130px;
   }
 
+  .lg\:pl-\[90px\] {
+    padding-left: 90px;
+  }
+
   .lg\:pr-\[7rem\] {
     padding-right: 7rem;
   }
 
-  .lg\:pl-\[90px\] {
-    padding-left: 90px;
+  .lg\:pr-\[3rem\] {
+    padding-right: 3rem;
   }
 
   .lg\:opacity-70 {
@@ -1396,10 +1418,6 @@ html {
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-5\/6 {
-    width: 83.333333%;
-  }
-
   .xl\:px-\[200px\] {
     padding-left: 200px;
     padding-right: 200px;
